# final-project-git_happens

./: .gitignore  README.md  environment.yml  pyproject.toml
examples/: main.py
figures/: diagram.drawio
src/: __init__.py
src/final_project_git_happens/: __init__.py
tests/: test_final_project.py
