# An extremely simple pyproject.toml
# Many more options here: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# How to build your package. "[S]trongly recommended" to include this,
# per the docs. We use hatchling, default on Python docs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "final_project_git_happens"
description = "A wind power forecasting package using machine learning"
version = "0.0.1"
authors = [
    { name = "Anna Thuesen", email = "s214253@dtu.dk" },
    { name = "Renato Thieleke", email = "s250675@dtu.dk" },
    { name = "Klara Storgaard", email = "s204130@dtu.dk" }
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pytest"
]

[project.urls]
Repository = "https://github.com/DTUWindEducation/final-project-git_happens.git"

[tool.hatch.build.targets.wheel]
packages = ["src/final_project_git_happens"]         
